// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error slot 1`] = `
<div role="feed" class="buri-list">
  <div class="buri-list__error-text">Custom Error</div>
  <div class="buri-list__placeholder"></div>
</div>
`;

exports[`finished slot 1`] = `
<div role="feed" class="buri-list">
  <div class="buri-list__finished-text">Custom Finished</div>
  <div class="buri-list__placeholder"></div>
</div>
`;
